--- a/FL11_HW2/homework/css/style.css
+++ b/FL11_HW2/homework/css/style.css
@@ -194,7 +194,7 @@
     }
 
 }
-/* 
+
 @media print {
     .tm-team-description-container {
         max-width: 100%;
@@ -294,4 +294,4 @@
     .tm-footer {
         font-size: 11px;
     }
-} */
+}
